# hackvibe-pac1-agent

./: .gitignore  LICENSE  README.md  RULES.md  pyproject.toml  runner.py
.claude/skills/solve-pac1/: SKILL.md
