[project]
name = "hackvibe-pac1-agent"
version = "1.0.0"
description = "Hack'n'Vibe — компактный агент для BitGN PAC1 на Claude Code, 5 место в Ultimate Leaderboard на blind prod"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bitgn-api-connectrpc-python==0.9.0.1.20260405144405+6b39e6872349",
    "bitgn-api-protocolbuffers-python==34.1.0.1.20260405144405+6b39e6872349",
]

[[tool.uv.index]]
url = "https://buf.build/gen/python"

[tool.uv]
package = false
